package cr.ac.una.glifo.pipeline.confidence

import cr.ac.una.glifo.pipeline.model.ConfidenceScore
import javax.inject.Inject

class ConfidenceScorer @Inject constructor() {
    // score(ocr: OcrResult, glossary: CourseGlossary): ConfidenceScore
}
