package cr.ac.una.glifo.pipeline.ocr

import cr.ac.una.glifo.pipeline.model.PageRegion

interface TextOcrEngine {
    // recognize(region: PageRegion): OcrResult
}
